<resources>
    <string name="app_name">TSU Clash of Classes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    Login-->
    <string name="welcome">Welcome back!</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forget">Forgot password?</string>
    <string name="signup">Sign Up</string>

    <!--    Forget page-->
    <string name="forget_pg">Forgot your password?</string>
    <string name="send_password">Send New Password</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_autumn">Autumn</string>
    <string name="menu_spring">Spring</string>
    <string name="menu_manage">Manage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    REGIST  -->
    <string name="fullname">Full Legal Name</string>
    <string name="dateof">Date of birth</string>
    <string name="emailreg">Email</string>
    <string name="phone">Phone</string>
    <string name="faculty">Faculty</string>
    <string name="grade">Grade</string>
    <string name="regist">Register</string>
    <string name="nextpg">Next</string>
    <string name="cancel">Cancel</string>

    <!-- Faculty Fragment  -->
    <string name="fac_name_mt">Faculty Name Required</string>
    <string name="fac_made_success">Faculty Successfully Made</string>
    <string name="fac_up_success">Faculty Updated Successfully</string>
    <string name="delete_fac_dialog">Are you sure you want to remove this Faculty?</string>
    <string name="fac_del_success">Faculty Deleted Successfully</string>

    <!-- Direction Fragment  -->
    <string name="dir_name_mt">Educational Direction Name Required</string>
    <string name="dir_made_success">Educational Direction Successfully Made</string>
    <string name="dir_up_success">Educational Direction Updated Successfully</string>
    <string name="delete_dir_dialog">Are you sure you want to remove this Education Direction?</string>
    <string name="dir_del_success">Education Direction Deleted Successfully</string>

    <!-- Group Fragment  -->
    <string name="group_name_mt">Group Name Required</string>
    <string name="group_made_success">Group Successfully Made</string>
    <string name="group_up_success">Group Updated Successfully</string>
    <string name="delete_group_dialog">Are you sure you want to remove this Group?</string>
    <string name="group_del_success">Group Deleted Successfully</string>

    <!-- Discipline Fragment  -->
    <string name="disc_name_mt">Discipline Name Required</string>
    <string name="disc_desc_mt">Discipline Description Required</string>
    <string name="disc_liter_mt">Discipline Literature Required</string>
    <string name="disc_year_mt">Discipline Year Required</string>
    <string name="disc_grade_mt">Discipline Grade Required</string>
    <string name="disc_build_mt">Discipline Building Required</string>
    <string name="disc_room_mt">Discipline Room Number Required</string>
    <string name="disc_made_success">Discipline Successfully Made</string>
    <string name="disc_up_success">Discipline Updated Successfully</string>
    <string name="delete_disc_dialog">Are you sure you want to remove this Discipline?</string>
    <string name="disc_del_success">Discipline Deleted Successfully</string>
    <string name="title_activity_main_teacher">MainTeacherActivity</string>

    <string name="menu_discipline_teacher">Discipline</string>
    <string name="menu_profile_teacher">Profile</string>
</resources>