<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.tsu.sdp_mobile_app.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_autumn"
        android:name="com.tsu.sdp_mobile_app.ui.autumn.AutumnFragment"
        android:label="@string/menu_autumn"
        tools:layout="@layout/fragment_autumn" />

    <fragment
        android:id="@+id/nav_spring"
        android:name="com.tsu.sdp_mobile_app.ui.spring.SpringFragment"
        android:label="@string/menu_spring"
        tools:layout="@layout/fragment_spring" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="com.tsu.sdp_mobile_app.ui.manage.ManageFragment"
        android:label="@string/menu_manage"
        tools:layout="@layout/fragment_manage" />
</navigation>