<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lgn_img1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="108dp"
        android:layout_marginTop="-55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/tsu_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        android:paddingStart="42dp"
        android:paddingEnd="42dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_name_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_box_style"
            android:ems="10"
            android:hint="Full Name"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_dob_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateof"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_dob_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_box_style"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailreg"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_box_style"
            android:ems="10"
            android:hint="@string/emailreg"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_phone_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_box_style"
            android:ems="10"
            android:hint="Phone"
            android:inputType="phone"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tv_faculty_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculty"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spiner_faculty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_box_style"
            android:padding="10dp">
        </Spinner>

        <TextView
            android:id="@+id/tv_grade_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spiner_grade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_box_style"
            android:padding="10dp">
        </Spinner>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>